Fixed 'qw-tab' alignment
Ticket: none

--- a/pub/System/FlatSkinPlugin/src/scss/qwiki/_actionbuttons.scss
+++ b/pub/System/FlatSkinPlugin/src/scss/qwiki/_actionbuttons.scss
@@ -53,7 +53,7 @@ $qw-tab-height-diff: 2 * ($qw-tab-pseudoborder + $qw-tab-deco-border-width) + $q
 
   .edit {
     display: inline-block;
-    // float: right;
+    float: right;
     margin-left: rem-calc(15);
     overflow-x: hidden;
     width: auto;
